--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
         </div>
         <div class="home-content">
             <h1>Aaron Bell</h1>
-            <h3>And I'm a <span class="multiple-text"></span></h3>
+            <h3>I'm a <span class="multiple-text"></span></h3>
             <p>I am a full-stack web developer and have been studying software at Atlas school in Tulsa, Oklahoma since January 2023. I am looking forward to graduating and starting my career in tech so I can provide value to clients in a career field that I love.</p>
             <br>
             <a href="https://drive.google.com/file/d/1WVOIMq1A4sHrUU6McV_KVRpePcESgjVR/view?usp=sharing" class="btn">General Resume</a>
@@ -139,18 +139,22 @@
     <section class="contact" id="contact">
         <h2 class="heading">Contact <span>Me!</span></h2>
 
-        <form action="#">
+        <form action="/submit_form" method="post">
+            <!--
             <div class="input-box">
-                <input type="text" placeholder="Full Name">
-                <input type="email" placeholder="Email Address">
+                <input type="text" placeholder="Full Name" name="name">
+                <input type="email" placeholder="Email Address" name="email">
             </div>
             <div class="input-box">
-                <input type="number" placeholder="Mobile Number">
+                <input type="number" placeholder="Mobile Number" name="number">
                 <input type="text" placeholder="Email Subject">
             </div>
-            <textarea name="" id="" cols="30" rows="10" placeholder="Your Message"></textarea>
+            <textarea name="message" id="" cols="30" rows="10" placeholder="Your Message"></textarea>
             <input type="submit" value="Send Message" class="btn">
+            -->
+            <iframe src="https://docs.google.com/forms/d/e/1FAIpQLSfTcO2ZlH02lSVPdJslh53YDzMu_uczAVvkHca3ebaV9Mq19g/viewform?embedded=true" width="640" height="821" frameborder="0" marginheight="0" marginwidth="0">Loading…</iframe>
         </form>
+        
     </section>
 
     <!-- footer design -->
